@@ -1,3 +1,10 @@
+#ifndef _DEFAULT_SOURCE
+#define _DEFAULT_SOURCE
+#endif
+#include <unistd.h>
+
+int setgroups(size_t , const gid_t *);
+
 int
 main()
 {
