@@ -9,13 +9,16 @@ Release 1.3-1.1 Start 30/11/2023 End 03/02/2024
 03. moved repository to indimail org
 - 22/01/2024
 04. added buffer library interface
-05. subsdio.h, subfdins.c, subfdouts.c, subfderr.c: use SUBSTDIO_SMALL
+05. substdio.h, subfdins.c, subfdouts.c, subfderr.c: use SUBSTDIO_SMALL
     definition from substdio.h
 - 23/01/2024
 06. timeoutread.c, timeoutwrite.c: added version using poll() instead of
     select() - taken from Erwin Hofman's fehQlibs
 - 31/01/2024
-07. envdir.c: handle symbolic links to .evndir and .envfile correctly
+07. envdir.c: handle symbolic links to .envdir and .envfile correctly
+- 29/04/2024
+08. tryshsgr.c, tryulong32.c, tryulong64.c: fix compiler warnings
+
 
 * Fri Sep 08 2023 12:40:38 +0530 Manvendra Bhangui <libqmail@indimail.org> 1.2-1.1%{?dist}
 Release 1.2-1.1 Start 24/04/2023 End 08/09/2023
